--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content=" width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Wine | Wine House is committed to producing estate grown wines of the highest caliber and distinction, each expressing the unique terroir of the property.</title>
+    <title>Tao Villages | Intentional Living Communities</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
     <link rel='stylesheet' href='css/settings.css' type='text/css' media='all' />
     <link href="http://fonts.googleapis.com/css?family=Laila:400,300,500,600,700%7CRuda%3A400%2C700%2C900%7CSource+Sans+Pro%3A100%2C100italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C700%2C700italic%2C900%2C900italic&subset=latin,cyrillic-ext,latin-ext,cyrillic" rel="stylesheet" type="text/css" media="all"/>
@@ -152,9 +152,9 @@
 				</div>
 				<div class="logoWrap">
 					<div class="logoHeader">
-						<a href="index.html">
+						<a href="/">
 							<span class="logoImg">
-								<img src="images/logo.png" alt="">
+								<img src="images/logo/logo_date_1.svg" alt="">
 							</span>
 						</a>
 						<span class="logo_bg_size"></span>
@@ -700,7 +700,7 @@
 									<li><a class="social_icons" href="https://twitter.com/Theme_REX" target="_blank"><img src="images/twitter.png" alt=""/></a></li>
 									<li><a class="social_icons" href="http://goo.gl/flzxSj" target="_blank"><img src="images/gplus.png" alt=""/></a></li>
 								</ul>
-								<div class="copy_descr">ThemeREX © 2016. All Rights Reserved.</div>
+								<div class="copy_descr">Tao Fruit © 2021. All Rights Reserved.</div>
 							</div>
 						</aside>
 						<aside class="sc_columns_item widgetWrap widget_trex_post">
