--- a/home2.html
+++ b/home2.html
@@ -151,9 +151,9 @@
 				</div>
 				<div class="logoWrap">
 					<div class="logoHeader">
-						<a href="index.html">
+						<a href="/">
 							<span class="logoImg">
-								<img src="images/logo.png" alt="">
+								<img src="images/logo/logo_date_1.svg" alt="">
 							</span>
 						</a>
 						<span class="logo_bg_size"></span>
@@ -460,7 +460,7 @@
 									<li><a class="social_icons" href="https://twitter.com/Theme_REX" target="_blank"><img src="images/twitter.png" alt=""/></a></li>
 									<li><a class="social_icons" href="http://goo.gl/flzxSj" target="_blank"><img src="images/gplus.png" alt=""/></a></li>
 								</ul>
-								<div class="copy_descr">ThemeREX © 2016. All Rights Reserved.</div>
+								<div class="copy_descr">Tao Fruit © 2021. All Rights Reserved.</div>
 							</div>
 						</aside>
 						<aside class="sc_columns_item widgetWrap widget_trex_post">
