--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content=" width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Wine | Wine House is committed to producing estate grown wines of the highest caliber and distinction, each expressing the unique terroir of the property.</title>
+    <title>Tao Villages | Intentional Living Communities</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
     <link rel='stylesheet' href='css/settings.css' type='text/css' media='all' />
     <link href="http://fonts.googleapis.com/css?family=Laila:400,300,500,600,700%7CRuda%3A400%2C700%2C900%7CSource+Sans+Pro%3A100%2C100italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C700%2C700italic%2C900%2C900italic&subset=latin,cyrillic-ext,latin-ext,cyrillic" rel="stylesheet" type="text/css" media="all"/>
@@ -51,7 +51,7 @@
 													<div class="widget_shopping_cart_content">
 														<ul class="cart_list product_list_widget sf-js-enabled">
 															<li class="mini_cart_item">
-																<a href="single-product.html"><img src="images/500x500.jpg" alt="">Brookstone Wine Chiller&nbsp; </a>
+																<a href="single-product.html"><img src="images/Layer-159-400x400.png" alt="">Brookstone Wine Chiller&nbsp; </a>
 																<span class="quantity">1 × <span class="amount"><span>$</span>187.00</span></span>
 															</li>
 															<li class="mini_cart_item">
@@ -174,31 +174,31 @@
 
 								<div class="tp-caption sfb stt rs-parallaxlevel-0" data-x="50" data-y="73" data-speed="600" data-start="500" data-easing="Linear.easeNone" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
 									<div class="tp-layer-inner-rotation   rs-slideloop" data-easing="Power3.easeInOut" data-speed="2" data-xs="0" data-xe="0" data-ys="0" data-ye="0">
-										<img src="images/1000x1000.jpg" alt="" data-ww="400" data-hh="400">
+										<img src="images/Layer-160.png" alt="" data-ww="400" data-hh="400">
 									</div>
 								</div>
 
 								<div class="tp-caption sfb stt rs-parallaxlevel-0" data-x="230" data-y="73" data-speed="600" data-start="1000" data-easing="Linear.easeNone" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
 									<div class="tp-layer-inner-rotation   rs-slideloop" data-easing="Power3.easeInOut" data-speed="2" data-xs="0" data-xe="0" data-ys="0" data-ye="0">
-										<img src="images/1000x1000.jpg" alt="" data-ww="400" data-hh="400">
+										<img src="images/Layer-159.png" alt="" data-ww="400" data-hh="400">
 									</div>
 								</div>
 
 								<div class="tp-caption sfb stt rs-parallaxlevel-0" data-x="430" data-y="75" data-speed="600" data-start="1500" data-easing="Power3.easeInOut" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
 									<div class="tp-layer-inner-rotation   rs-slideloop" data-easing="Power3.easeInOut" data-speed="2" data-xs="0" data-xe="0" data-ys="0" data-ye="0">
-										<img src="images/1000x1000.jpg" alt="" data-ww="400" data-hh="400">
+										<img src="images/Layer-158.png" alt="" data-ww="400" data-hh="400">
 									</div>
 								</div>
 
 								<div class="tp-caption sfb stt rs-parallaxlevel-0" data-x="630" data-y="76" data-speed="600" data-start="2000" data-easing="Power3.easeInOut" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
 									<div class="tp-layer-inner-rotation   rs-slideloop" data-easing="Power3.easeInOut" data-speed="2" data-xs="0" data-xe="0" data-ys="0" data-ye="0">
-										<img src="images/1000x1000.jpg" alt="" data-ww="400" data-hh="400">
+										<img src="images/Layer-157.png" alt="" data-ww="400" data-hh="400">
 									</div>
 								</div>
 
 								<div class="tp-caption sfb stt rs-parallaxlevel-0" data-x="830" data-y="77" data-speed="600" data-start="2500" data-easing="Power3.easeInOut" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
 									<div class="tp-layer-inner-rotation   rs-slideloop" data-easing="Power3.easeInOut" data-speed="2" data-xs="0" data-xe="0" data-ys="0" data-ye="0">
-										<img src="images/1000x1000.jpg" alt="" data-ww="400" data-hh="400">
+										<img src="images/Layer-156.png" alt="" data-ww="400" data-hh="400">
 									</div>
 								</div>
 
@@ -311,7 +311,7 @@
 							<div class="isotopeItemWrap">
 								<div class="isotopeItemWrap">
 									<div class="thumb">
-										<img src="images/500x500.jpg" alt="Favourite Place">
+										<img src="images/1-450x450.jpg" alt="Favourite Place">
 									</div>
 									<div class="isotopeContentWrap">
 										<div class="isotopeContent">
@@ -326,7 +326,7 @@
 							<div class="isotopeItemWrap">
 								<div class="isotopeItemWrap">
 									<div class="thumb">
-										<img src="images/500x500.jpg" alt="In Vino Veritas">
+										<img src="images/XIBPemROQ9iJdUMOOBmG_IMG_1863-450x450.jpg" alt="In Vino Veritas">
 									</div>
 									<div class="isotopeContentWrap">
 										<div class="isotopeContent">
@@ -341,7 +341,7 @@
 							<div class="isotopeItemWrap">
 								<div class="isotopeItemWrap">
 									<div class="thumb">
-										<img src="images/500x500.jpg" alt="Wine Essentials">
+										<img src="images/11-450x450.jpg" alt="Wine Essentials">
 									</div>
 									<div class="isotopeContentWrap">
 										<div class="isotopeContent">
@@ -356,7 +356,7 @@
 							<div class="isotopeItemWrap">
 								<div class="isotopeItemWrap">
 									<div class="thumb">
-										<img src="images/500x500.jpg" alt="Winemaking Is An Art">
+										<img src="images/kaboompics.com_Bottle-of-wine1-450x450.jpg" alt="Winemaking Is An Art">
 									</div>
 									<div class="isotopeContentWrap">
 										<div class="isotopeContent">
@@ -371,7 +371,7 @@
 							<div class="isotopeItemWrap">
 								<div class="isotopeItemWrap">
 									<div class="thumb">
-										<img src="images/2000x1200.jpg" alt="Organic Grapes">
+										<img src="images/4-900x450.jpg" alt="Organic Grapes">
 									</div>
 									<div class="isotopeContentWrap">
 										<div class="isotopeContent">
@@ -386,7 +386,7 @@
 							<div class="isotopeItemWrap">
 								<div class="isotopeItemWrap">
 									<div class="thumb">
-										<img src="images/500x500.jpg" alt="Sustainable Farmed">
+										<img src="images/wine-63931_12802-450x450.jpg" alt="Sustainable Farmed">
 									</div>
 									<div class="isotopeContentWrap">
 										<div class="isotopeContent">
@@ -401,7 +401,7 @@
 							<div class="isotopeItemWrap">
 								<div class="isotopeItemWrap">
 									<div class="thumb">
-										<img src="images/500x500.jpg" alt="Fabulous Taste">
+										<img src="images/Depositphotos_4520266_original-450x450.jpg" alt="Fabulous Taste">
 									</div>
 									<div class="isotopeContentWrap">
 										<div class="isotopeContent">
@@ -422,7 +422,7 @@
 							<ul class="products">
 								<li class="product">
 									<a href="single-product.html" class="woocommerce-LoopProduct-link">
-										<img src="images/500x500.jpg" alt=""/>
+										<img src="images/Layer-159-400x400.png" alt=""/>
 										<h3>2010 VSJ Romantique Reserve</h3>
 										<span class="price">
 											<span class="amount"><span>&#36;</span>60.00</span>
@@ -432,7 +432,7 @@
 								</li>
 								<li class="product">
 									<a href="single-product.html" class="woocommerce-LoopProduct-link">
-										<img src="images/500x500.jpg" alt=""/>
+										<img src="images/Layer-160-400x400.png" alt=""/>
 										<h3>2011 VSJ Reserve White</h3>
 										<span class="price">
 											<span class="amount"><span>&#36;</span>34.00</span>
@@ -442,7 +442,7 @@
 								</li>
 								<li class="product last">
 									<a href="single-product.html" class="woocommerce-LoopProduct-link">
-										<img src="images/500x500.jpg" alt=""/>
+										<img src="images/Layer-158-400x400.png" alt=""/>
 										<h3>2011VSJ Reserve Albarino</h3>
 										<span class="price">
 											<span class="amount"><span>&#36;</span>27.00</span>
@@ -484,7 +484,7 @@
 										<div class="eventExcerpt">Vestibulum volutpat, libero vitae euismod sodales, magna lacus accumsan tellus, in ornare purus sem et metus. In pharetra luctus libero, in auctor magna dignissim sit amet. Maecenas sagittis est quis metus ullamcorper posuere. Praesent non fermentum felis. Pellentesque eleifend imperdiet arcu non pretium morbi vestibulum tellus ante.</div>
 										<div class="eventMore"><a href="single-post.html" class="sc_button sc_button_skin_dark sc_button_style_bg sc_button_size_big">Event details</a></div>
 									</div>
-									<div class="sc_columns_item"><img alt="" src="images/2000x1200.jpg"></div>
+									<div class="sc_columns_item"><img alt="" src="images/post-1240x698.jpg"></div>
 								</div>
 							</div>
 						</div>
@@ -499,7 +499,7 @@
 								<div class="sc_columns_item">
 									<article class="sc_blogger_item">
 										<div class="thumb">
-											<a href="single-post.html"><img alt="" src="images/2000x1200.jpg"></a>
+											<a href="single-post.html"><img alt="" src="images/Depositphotos_5374778_l1-310x310.jpg"></a>
 										</div>
 										<h5 class="sc_blogger_title sc_title"><a href="single-post.html">Amazing Taste</a></h5>
 										<div class="sc_blogger_content">
@@ -510,7 +510,7 @@
 								<div class="sc_columns_item">
 									<article class="sc_blogger_item">
 										<div class="thumb">
-											<a href="single-post.html"><img alt="" src="images/2000x1200.jpg"></a>
+											<a href="single-post.html"><img alt="" src="images/Depositphotos_6971969_original-310x310.jpg"></a>
 										</div>
 										<h5 class="sc_blogger_title sc_title"><a href="single-post.html">Vital Products</a></h5>
 										<div class="sc_blogger_content">
@@ -521,7 +521,7 @@
 								<div class="sc_columns_item">
 									<article class="sc_blogger_item">
 										<div class="thumb">
-											<a href="single-post.html"><img alt="" src="images/2000x1200.jpg"></a>
+											<a href="single-post.html"><img alt="" src="images/Depositphotos_7702215_original-310x310.jpg"></a>
 										</div>
 										<h5 class="sc_blogger_title sc_title"><a href="single-post.html">Sustainably Farmed</a></h5>
 										<div class="sc_blogger_content">
@@ -532,7 +532,7 @@
 								<div class="sc_columns_item">
 									<article class="sc_blogger_item">
 										<div class="thumb">
-											<a href="single-post.html"><img alt="" src="images/2000x1200.jpg"></a>
+											<a href="single-post.html"><img alt="" src="images/Depositphotos_9290522_l-310x310.jpg"></a>
 										</div>
 										<h5 class="sc_blogger_title sc_title"><a href="single-post.html">Organic Grapes</a></h5>
 										<div class="sc_blogger_content">
@@ -551,12 +551,12 @@
 					<div class="sc_content mainWrap custom_mar_5">
 						<div class="sc_line sc_line_style_solid sc_line_align_center sc_line_sep blocks_6"></div>
 						<section>
-							<a href="#"><img class="aligncenter" src="images/500x500.jpg" alt=""/></a>
-							<a href="#"><img class="aligncenter" src="images/500x500.jpg" alt=""/></a>
-							<a href="#"><img class="aligncenter" src="images/500x500.jpg" alt=""/></a>
+							<a href="#"><img class="aligncenter" src="images/ico1.png" alt=""/></a>
+							<a href="#"><img class="aligncenter" src="images/ico2.png" alt=""/></a>
+							<a href="#"><img class="aligncenter" src="images/ico3.png" alt=""/></a>
 						</section>
 						<div class="sc_line sc_line_style_solid sc_line_align_center sc_line_sep blocks_7"></div>
-						<h4 class="sc_title sc_title_center custom_title_4">Join W.W.Co Mailing List</h4>
+						<h4 class="sc_title sc_title_center custom_title_4">Join Tao Villages Mailing List</h4>
 						<div class="sc_emailer sc_align_center">
 							<form class="sc_eform_form sc_eform_opened sc_eform_show" data-type="emailer">
 								<a href="#" class="sc_eform_button sc_button sc_button_skin_dark sc_button_style_bg sc_button_size_medium ico icon-mail" title="Submit"></a>
@@ -581,7 +581,7 @@
 									<li><a class="social_icons" href="https://twitter.com/Theme_REX" target="_blank"><img src="images/twitter.png" alt=""/></a></li>
 									<li><a class="social_icons" href="http://goo.gl/flzxSj" target="_blank"><img src="images/gplus.png" alt=""/></a></li>
 								</ul>
-								<div class="copy_descr">ThemeREX © 2016. All Rights Reserved.</div>
+								<div class="copy_descr">Tao Fruit © 2021. All Rights Reserved.</div>
 							</div>
 						</aside>
 						<aside class="sc_columns_item widgetWrap widget_trex_post">
