--- a/gallery-medium.html
+++ b/gallery-medium.html
@@ -148,9 +148,9 @@
 				</div>
 				<div class="logoWrap">
 					<div class="logoHeader">
-						<a href="index.html">
+						<a href="/">
 							<span class="logoImg">
-								<img src="images/logo.png" alt="">
+								<img src="images/logo/logo_date_1.svg" alt="">
 							</span>
 						</a>
 						<span class="logo_bg_size"></span>
