--- a/images/index.html
+++ b/images/index.html
@@ -13,7 +13,9 @@ You do not have permission to access this document.
 Web Server at wine-html.themerex.net
 </ADDRESS>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"6a57728f1c7e2aa5","token":"dab7be3e6ab04952b40d6c8e93f6cc2a","version":"2021.10.0","si":100}'></script>
-</BODY>
+	<script src="js/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/iguana_notify.js"></script>
+</body>
 </HTML>
 
 <!--
