--- a/events.html
+++ b/events.html
@@ -857,5 +857,7 @@
 	<script type='text/javascript' src='js/vendor/magnific/magnific-popup.min.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect.min.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect-slide.js'></script>
+	<script src="js/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/iguana_notify.js"></script>
 </body>
 </html>
