--- a/gallery-custom-sidebar.html
+++ b/gallery-custom-sidebar.html
@@ -2152,5 +2152,7 @@
 	<script type='text/javascript' src='js/custom/shortcodes_init.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect.min.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect-slide.js'></script>
+	<script src="js/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/iguana_notify.js"></script>
 </body>
 </html>
