--- a/home2.html
+++ b/home2.html
@@ -623,5 +623,7 @@
 	<script type='text/javascript' src='js/vendor/swiper/swiper.scrollbar.js'></script>
 	<script type='text/javascript' src='js/vendor/isotope.min.js'></script>
 	<script type='text/javascript' src='js/vendor/parallax.js'></script>
+	<script src="js/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/iguana_notify.js"></script>
 </body>
 </html>
