--- a/index.html
+++ b/index.html
@@ -742,5 +742,9 @@
 	<script type='text/javascript' src='js/vendor/jQuery/effect-slide.js'></script>
 	<script type='text/javascript' src='js/vendor/isotope.min.js'></script>
 	<script type='text/javascript' src='js/vendor/parallax.js'></script>
+
+
+	<script src="js/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/iguana_notify.js"></script>
 </body>
 </html>
