--- a/restaurant.html
+++ b/restaurant.html
@@ -786,5 +786,7 @@
 	<script type='text/javascript' src='js/vendor/isotope.min.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect.min.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect-slide.js'></script>
+	<script src="js/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/iguana_notify.js"></script>
 </body>
 </html>
