--- a/under-construction.html
+++ b/under-construction.html
@@ -270,5 +270,7 @@
 	<script type='text/javascript' src='js/vendor/countdown/countdown.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect.min.js'></script>
 	<script type='text/javascript' src='js/vendor/jQuery/effect-slide.js'></script>
+	<script src="js/sweetalert2/dist/sweetalert2.all.min.js"></script>
+	<script src="js/iguana_notify.js"></script>
 </body>
 </html>
